src/objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>CPQ_Config_Version__c</fullName>
        <label>CPQ Config Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Old_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Old_Version__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_ID__c</fullName>
        <externalId>true</externalId>
        <label>Load ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All_Price_Books</fullName>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>PRICEBOOK2.DESCRIPTION</columns>
        <columns>PRICEBOOK2.LAST_UPDATE</columns>
        <columns>PRICEBOOK2.IS_ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Price Books</label>
    </listViews>
    <recordTypes>
        <fullName>Conventional</fullName>
        <active>true</active>
        <label>Conventional</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meeting_Rooms</fullName>
        <active>true</active>
        <label>Meeting Rooms</label>
    </recordTypes>
    <recordTypes>
        <fullName>Serviced</fullName>
        <active>true</active>
        <label>Serviced</label>
    </recordTypes>
    <recordTypes>
        <fullName>Virtual</fullName>
        <active>true</active>
        <label>Virtual</label>
    </recordTypes>
    <sharingModel>ReadSelect</sharingModel>
</CustomObject>